--- a/client/packages.config
+++ b/client/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autoupdater.NET.Official" version="1.6.4" targetFramework="net40" />
+  <package id="Autoupdater.NET.Official" version="1.9.2" targetFramework="net48" />
   <package id="Base32" version="1.0.0.26" targetFramework="net40" />
   <package id="Costura.Fody" version="5.7.0" targetFramework="net40" developmentDependency="true" />
-  <package id="Fody" version="6.6.4" targetFramework="net40" developmentDependency="true" />
+  <package id="Fody" version="6.8.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2739.15" targetFramework="net48" />
   <package id="OtpSharp" version="1.3.0.4" targetFramework="net40" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net40" />
 </packages>
